[gd_scene load_steps=33 format=3 uid="uid://uo3ekg1svapg"]

[ext_resource type="Script" path="res://Acte2_Pirate/Scripts/PNJ/oliver_blackwood.gd" id="1_qa2ua"]
[ext_resource type="Texture2D" uid="uid://cxnmaj5xe31ug" path="res://Acte2_Pirate/ImportImages/PNJ/Oliver/Oliver Blackwood Idle.png" id="2_2k6cr"]
[ext_resource type="Script" path="res://Global/Scripts/Talk/StartToTalk.gd" id="3_7j3q6"]
[ext_resource type="Texture2D" uid="uid://bkmca50fshx4" path="res://Acte2_Pirate/ImportImages/PNJ/Oliver/Oliver Blackwood talking.png" id="3_jqurh"]
[ext_resource type="Texture2D" uid="uid://bidfghvavpoho" path="res://Acte2_Pirate/ImportImages/PNJ/Oliver/Oliver Blackwood walking.png" id="4_082y3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uxy1b"]
atlas = ExtResource("2_2k6cr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y3m6"]
atlas = ExtResource("2_2k6cr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7udj"]
atlas = ExtResource("2_2k6cr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwdpr"]
atlas = ExtResource("2_2k6cr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65hse"]
atlas = ExtResource("2_2k6cr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ka31"]
atlas = ExtResource("2_2k6cr")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt8vh"]
atlas = ExtResource("2_2k6cr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t171x"]
atlas = ExtResource("2_2k6cr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by1pa"]
atlas = ExtResource("3_jqurh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efvns"]
atlas = ExtResource("3_jqurh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7166"]
atlas = ExtResource("3_jqurh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vudqo"]
atlas = ExtResource("3_jqurh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbtds"]
atlas = ExtResource("3_jqurh")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud3i8"]
atlas = ExtResource("3_jqurh")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3lvc"]
atlas = ExtResource("3_jqurh")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e2d7"]
atlas = ExtResource("3_jqurh")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djwxc"]
atlas = ExtResource("4_082y3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdi5f"]
atlas = ExtResource("4_082y3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_clf4k"]
atlas = ExtResource("4_082y3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usg6u"]
atlas = ExtResource("4_082y3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5gfe"]
atlas = ExtResource("4_082y3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylvij"]
atlas = ExtResource("4_082y3")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc0ry"]
atlas = ExtResource("4_082y3")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcuxr"]
atlas = ExtResource("4_082y3")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_86u0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxy1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y3m6")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_k7udj")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_fwdpr")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_65hse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ka31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt8vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t171x")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_by1pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efvns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vudqo")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_kbtds")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ud3i8")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_h3lvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e2d7")
}],
"loop": true,
"name": &"talking",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djwxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdi5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clf4k")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_usg6u")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_v5gfe")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ylvij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc0ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcuxr")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arwx4"]
size = Vector2(180, 405)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02aop"]
size = Vector2(518, 459)

[node name="OliverBlackwood" type="CharacterBody2D"]
script = ExtResource("1_qa2ua")
talkLines = Array[String](["Salut, ça va ?", "C'est juste un test, je vais bientôt partir.", "Du coup, à plus."])

[node name="OliverBlackwoodSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -223)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_86u0b")
animation = &"walking"
frame = 7
frame_progress = 0.860358

[node name="CollisionPNJ" type="CollisionShape2D" parent="."]
position = Vector2(2, -200.5)
shape = SubResource("RectangleShape2D_arwx4")

[node name="AreaToTalk" type="Area2D" parent="." groups=["InteractionObject"]]
script = ExtResource("3_7j3q6")

[node name="CollisionTalk" type="CollisionShape2D" parent="AreaToTalk"]
z_index = -1
position = Vector2(-5, -223.5)
shape = SubResource("RectangleShape2D_02aop")
debug_color = Color(0.227718, 0.628741, 0.320598, 0.42)

[node name="ZoneTextDialog" type="Node2D" parent="."]
position = Vector2(0, -500)

[connection signal="body_entered" from="AreaToTalk" to="AreaToTalk" method="_on_body_entered"]
[connection signal="body_exited" from="AreaToTalk" to="AreaToTalk" method="_on_body_exited"]
[connection signal="startDialog" from="AreaToTalk" to="." method="_on_area_to_talk_start_dialog"]
